fixed title alignment

--- a/content/media/css/style.css
+++ b/content/media/css/style.css
@@ -47,6 +47,7 @@ div.sidebar {
 }
 
 header.info{
+    padding-top: 10px;
     left: 35px;
     position: fixed;
     text-align:center;
